--- a/index.css
+++ b/index.css
@@ -3,8 +3,7 @@
 body {
   font-family: Arial, sans-serif;
   margin: 0;
-  color: hsl(0, 0%, 20%);
-  border: 8px solid hsl(120, 60%, 40%);
+  background-image: linear-gradient(to right, gray, white);
   height: 100vh;
   box-sizing: border-box;
 }
